Merge from main (#471)
* Hardcode several JavaRuntimeParams values.

PiperOrigin-RevId: 860637485
Change-Id: Ibbd87902f4ef73e3620180ad870dc8200a40b417

* Modernize Java syntax to JDK17 level in App Engine code base.

PiperOrigin-RevId: 861206703
Change-Id: If6a63e7bae3d33e833cf752ee8313d88b9dffa86

* Update all non-major dependencies

* Refactor: Use lambda expressions and Character.valueOf.

PiperOrigin-RevId: 862378286
Change-Id: I140e95ffda132265f442bc1d222c587331e367d6

* Update all non-major dependencies

* Refactor AppEngineWebXmlInitialParse to allow mocking environment variables and add a test.
New Test Permutations
We added new test cases to AppEngineWebXmlInitialParseTest.java to ensure full coverage of Runtime, Jetty, and Jakarta EE version combinations:

testJava17WithExperimentEnableJetty12: Verifies that when the environment variable EXPERIMENT_ENABLE_JETTY12_FOR_JAVA is set to true for the java17 runtime (simulated via envProvider), the configuration correctly defaults to appengine.use.EE8=true (Jetty 12.0 in EE8 mode) instead of the standard Jetty 9.4 legacy mode.

testHttpConnectorExperiment: Verifies that when EXPERIMENT_ENABLE_HTTP_CONNECTOR_FOR_JAVA is set to true, the system properties appengine.use.HttpConnector and appengine.ignore.cancelerror are automatically enabled.

testJava17WithJetty121: Verifies that for the java17 runtime, enabling appengine.use.jetty121 alone does not inadvertently enable Jakarta EE 8, 10, or 11.

It confirms that the configuration remains valid with only the Jetty 12.1 flag set.

testJava17WithEE8AndJetty121: Verifies that for java17, explicitly enabling both appengine.use.EE8 and appengine.use.jetty121 correctly sets both properties to true, supporting the legacy EE8 environment on the newer Jetty infrastructure.

testJava21WithEE10Explicit: Confirms that explicitly setting appengine.use.EE10 for java21 (which is the default) works as expected, ensuring EE10 is true and jetty121 remains false (mapping to Jetty 12.0